Some linter fixes.

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
-platform = atmelavr
-board = nanoatmega328
-framework = arduino
+[platformio]
+env_default = nano
 
-; [env:uno]
-; platform = atmelavr
-; board = uno
-; framework = arduino
+[env:native]
+platform = native
+
+[env:nano]
+platform = atmelavr
+framework = arduino
+board = nanoatmega328
