--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
-
 [platformio]
 env_default = nano
 
@@ -18,3 +8,8 @@ platform = native
 platform = atmelavr
 framework = arduino
 board = nanoatmega328
+
+[env:uno]
+platform = atmelavr
+framework = arduino
+board = uno
