Added stuff to native env.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,10 @@
 [platformio]
 env_default = nano
+build_flags = -fmax-errors=2
 
 [env:native]
 platform = native
+; lib_extra_dirs = lib/googletest/googlemock/include, lib/googletest/googletest/include, test/lib, lib/arduino-mock/include
 
 [env:nano]
 platform = atmelavr
