--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
 env_default = nano
-build_flags = -Os -Ofast -fmax-errors=2
+build_flags = -Ofast -fmax-errors=2
 
 [env:native]
 platform = native
