--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,13 @@ platform = atmelavr
 framework = arduino
 board = nanoatmega328
 
+[env:feather]
+platform = atmelavr
+framework = arduino
+board = feather32u4
+build_flags = -Ofast -fmax-errors=1
+board_f_cpu = 16000000L
+
 [env:uno]
 platform = atmelavr
 framework = arduino
